Redirect mobile visitors to /mobile/; add Desktop site link

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -306,6 +306,7 @@
       <div class="u-ava">XD</div>
       <div><div class="u-name">xDreamer</div><div class="u-role" id="uRole">Viewer</div></div>
     </div>
+    <a href="/?desktop=1" class="desktop-link"><i data-lucide="monitor" class="lc-sm"></i> Desktop site</a>
   </aside>
 
   <script src="js/app.js"></script>
